# discord-rs

./: Cargo.toml  README.md  notes.md
src/: api.rs  channel.rs  client.rs  context.rs  endpoints.rs  gateway_ws.rs  guild.rs  http.rs  lib.rs  message.rs  permissions.rs  user.rs  user_structs.rs  util.rs  voice.rs  wrapper.rs
src/gateway/: connection.rs  dispatched_event.rs  error.rs  events.rs  mod.rs
src/model/: channel.rs  guild.rs  message.rs  mod.rs  permissions.rs  user.rs  voice.rs
src/serde_utils/: deserialize_single_element.rs  macros.rs  mod.rs  unix_millis.rs
src/wrapper/: message.rs  user.rs
