[package]
name = "discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-std = "1.12.0"
async-trait = "0.1.74"
err-derive = "0.3.1"
lazy_static = "1.4.0"
num = "0.4.1"
num-derive = "0.4.1"
num-traits = "0.2.17"
rand = {version = "0.8.5"}
rand_chacha = "0.3.1"
reqwest = {version = "0.11.22", features=["cookies", "json"]}
serde = {version = "1.0.192", features = ["derive"]}
serde_json = "1.0.108"
thiserror = "1.0.50"
tokio = {versions = "1.34.0", features = ["rt-multi-thread", "macros"]}
