[package]
name = "discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-std = "1.12.0"
async-trait = "0.1.74"
eetf = "0.9.0"
err-derive = "0.3.1"
futures-util = "0.3.30"
hex = "0.4.3"
lazy_static = "1.4.0"
num = "0.4.1"
num-derive = "0.4.1"
num-traits = "0.2.17"
rand = {version = "0.8.5"}
rand_chacha = "0.3.1"
reqwest = {version = "0.11.22", features=["cookies", "json"]}
serde-aux = "4.5.0"
serde_eetf = "0.2.0"
serde = {version = "1.0.192", features = ["derive"]}
serde_json = "1.0.108"
serde_repr = "0.1.17"
thiserror = "1.0.50"
time = {version = "0.3.36", features = ["serde"]}
tokio = { version = "1.38.0", features = ["full"] }
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
zstd = "0.13.1"
arboard = "3.4.0"
